borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__check_use_discriminant_on_struct.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: actual.unwrap_err().to_token_stream().to_string()
---
:: core :: compile_error ! { "borsh(use_discriminant=<bool>) does not support structs" }
