borsh-derive-internal/src/snapshots/borsh_derive_internal__attribute_helpers__tests__check_use_discriminant_wrong_value.snap
---
source: borsh-derive-internal/src/attribute_helpers.rs
expression: err
---
Error(
    "`use_discriminant` accepts only `true` or `false`",
)
